--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Rutgers Triathlon</h1>
+---
+layout: default
+title: Home
+---
+<div class="container-fluid">
+  <img src="/resources/bannerpic1.jpg" align="center">
+</div>
+<br>
+<div class="container-fluid">
+  <blockquote>The Rutgers Triathlon Team aspires to be one of the leading collegiate triathlon racing teams within New Jersey and the East Coast. The team is based out of New Brunswick, NJ and has been active since 2010. The fall of 2011 was its inaugural collegiate race season in the Northeast Collegiate Triathlon Conference (NECTC). The team has grown from having 5 racing members in the 2011 season to over 20 racing members in 2013. The Rutgers Tri Team is quickly growing in number and becoming more competitive. </blockquote>
+</div>
