--- a/join.html
+++ b/join.html
@@ -17,13 +17,15 @@
   </head>
   <body>
     {% include navbar.html %}
-    {% include joinContent.html %}
+    <!-- {% include membersList.html %} -->
   </body>
 
   <!-- <script src="js/jquery-2.1.3.min.js"/> -->
+  <!---->
   <script src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"></script>
   <script src="js/firebase.js"></script>
   <script type="text/javascript">
-   updateNavbarToMembersPage();
+   // retrieveAndPopulateMemberData();
+   // updateNavbarToMembersPage();
   </script>
 </html>
