Moving away from Jekyll :)

--- a/faqs.html
+++ b/faqs.html
@@ -1,4 +1,117 @@
----
-layout: faqLayout
-title: Rutgers Triathlon FAQs
----
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>FAQs - Rutgers Triathlon Team</title>
+
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+    <![endif]-->
+    <link rel="shortcut icon" href="img/triathlonLogo.png">
+  </head>
+  <body>
+<!-- Nav Bar -->
+    <div id="nav-placeholder">NavBar</div>
+    <script src="//code.jquery.com/jquery.min.js"></script>
+    <script>
+        $.get("needs/navbar.html", function(data){
+        $("#nav-placeholder").replaceWith(data);
+        });
+    </script>
+<!-- End Nav Bar -->
+
+<!-- Faqs Content -->
+    <div class="container-fluid top-buffer" id="aboutContainer">
+    <div class ="aboutcontent">
+      <h1>Frequently Asked Questions</h1>
+    	<div class ="imgwrap">
+    		<img src ="img/faqsMontauk.png">
+    		<div class='description'>
+    		<!-- description content -->
+    			<p class='description_content'>Rutgers Triathlon Team at Mightyman Montauk 2017!</p>
+    		<!-- end description content -->
+    		</div>
+    	</div>
+
+    	</br>
+    	</br>
+    	<p>Triathlon is a continually growing sport and is brand new for most people. While you may be a swimmer, biker or runner; who would think to do all three at once?!  Here, we have collected a number of common questions that you might have about our favorite sport(s?).</p>
+    	</br>
+    	<p> <a href ="#whatis">What is a triathlon?</a></p>
+      <p> <a href ="#howlong">How long are triathlon races?</a></p>
+      <p> <a href ="#races">Where do you race?</a></p>
+      <p> <a href="#new">I have never done X, can I still join and race? (X = swimming, biking, running, triathlons)</a></p>
+      <p> <a href ="#whereswim">Where do you swim? Outside? In the Hudson River??</a></p>
+      <p> <a href ="#indoortri">I am nervous about swimming in open water, can I still join?</a></p>
+      <p> <a href ="#prac">What are your practices like?</p>
+      <p> <a href ="#need">What do I need to come to practice?</a></p>
+      <p> <a href ="#fun">Is triathlon the only form of 'fun' you guys do?</a></p>
+      <p> <a href ="#join">How do I join?</a></p>
+      </br>
+
+      <h3 id="whatis"><b>What is a triathlon?</b></h3></br>
+        <p>Triathlons are timed multi-sport endurance racing events. They typically consist of three parts in the order of swimming, biking and running. After each leg of the race, athletes switch to the appropriate gear during transition. Trasition 1 (T1) is swim to bike and transition 2 is bike to run.</p></br>
+
+      <h3 id="howlong"><b>How long are triathlon races?</b></h3></br>
+        <p>Our team typically race in Olympic distance triathlons. These are composed of a 1500 m swim, 40 km bike, and a 10 km run. For newer triathletes we also do Sprint distance triathlons, composed of a 400-800 m swim, 15-25 km bike, and a 5 km run. Beyond Olympic distances, are half-ironman and full ironman distances. Although our team doesn't compete at these longer distances, we frequently have members racing in them!</p></br>
+
+      <h3 id="new"><b>I have never done X, can I still join and race? (X = swimming, biking, running, triathlons)</b></h3></br>
+        <p>YES! We welcome all newcomers of any ability. Whether you've done 5 ironmans or never stepped foot in a pool, you are more than welcome to join the team and learn to triathlon. Our practice captains will help you learn to swim, bike and run and eventually race!</p></br>
+
+      <h3 id="races"><b>Where do you race?</b></h3></br>
+        <p>Our team races in the Northeast Collegiate Triathlon Conference, which has both Sprint and Olympic distance races and take place all along the northeast. Individual athletes typically make their own race schedule, and we encourage members to race in the conference with our race schedule listed <a href ="raceschedule.html">here.</a> After racing in the conference, our athletes qualify to compete at USAT Collegiate Club Nationals. The main bulk of our season occurs during the Fall semester with Nationals in the Spring semester in April.</p></br>
+
+      <h3 id="whereswim"><b>Where do you swim? Outside? In the Hudson River??</b></h3></br>
+        <p>Indeed, triathlon is an outdoor sport. While biking and running outside is common, open water swimming may be a foreign idea to some. The swim portion of triathlons takes place in an outdoor body of water such as a lake, river or the beach. The largest nearby race is the New York City Triathlon, where the participants do swim in the western Hudson River. We organize open water swim practices in order to help newcomers acclimate.</p></br>
+
+      <h3 id="indoortri"><b>I am nervous about swimming in open water, can I still join?</b></h3></br>
+        <p>Don't worry! We have all been nervous! Open water swimming can be a big jump in. You can definitely still join the team and train with us. If you're interested to try out racing we do host the annual Rutgers Indoor Triathlon every Fall semester! In this case swimming is done in a lap pool, participants bike on a spin bike and the run takes place outside on a track, weather permitting. Check it out <a href="RU_indoortriathlon.html">here.</a></p></br>
+
+      <h3 id="prac"><b>What are your pratices like?</b></h3></br>
+        <p>Our practices take place on either the Busch, Livingston or Cook/Douglass campuses. Our practice schedule usually changes every semester so check <a href ="pracschedule.html">here</a> for the most up to date schedule. At each workout, there will be a practice captain or experience team member to lead the workout and help any newcomers. Practices are not mandatory, but heavily encouraged so that we can all be friends!</p></br>
+
+      <h3 id="need"><b>What do I need to come to practice?</b></h3></br>
+        <p>All you need to join the team is yourself and a willingess to dare to tri! While each sport has its own individual requirements, the basics for swimming are a swimsuit, goggles and swimcap; for biking (outdoors) are a bike and helmet (and spare tubes / co2 or pump are generally required); for running are running shoes and appropriate runwear. For more details, check out the sport specific resource page. If you don't have a bike yet, spin bikes are available at Werblin and we are also <a href ="sponsors.html">sponsored</a> by our local bike shop: <a href ="https://www.popsbikeshop.com/"> Pop's Bike Shop!</a> If you're in the market for a bike, definitely check them out for a sweet deal!</p></br>
+
+      <h3 id="fun"><b>Is triathlon the only form of 'fun' you guys do?</b></h3></br>
+        <p>While triathlon is definitly great, we do enjoy having fun that doesn't involve swimming, biking or running! We have various social events organized by our great social officer, Casey Jones, and also help out the community through various forms of volunteering.</p></br>
+
+      <h3 id ="join"><b>How do I join?</b></h3></br>
+        <p>Like what you see? Head on over to our <a href="join.html">Join webpage</a> and get started! We can't wait to see you at practice!</p></br>
+
+    	<p>Any other questions not shown here? Feel free to contact us at any time via email: <a href="mailto:rutgerstriteam@gmail.com"> rutgerstriteam@gmail.com</a> or if you join our <a href="https://www.facebook.com/groups/274413140871/">Facebook page</a>, our members will be happy to answer your questions.</p>
+
+      </br>
+    </div>
+    </div>
+<!-- End Faqs Content -->
+
+  </body>
+
+<!-- Footer -->
+  <div id="nav-placeholder">NavBar</div>
+  <script src="//code.jquery.com/jquery.min.js"></script>
+  <script>
+      $.get("needs/footer.html", function(data){
+      $("#nav-placeholder").replaceWith(data);
+      });
+  </script>
+<!-- End Footer -->
+
+  <!-- <script src="js/jquery-2.1.3.min.js"/> -->
+  <!---->
+  <script src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"></script>
+  <script src="js/firebase.js"></script>
+  <script src="js/jquery-2.1.3.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/dropdownonhover.js"></script>
+  <script type="text/javascript">
+   updateNavbarToFAQsPage();
+   updateNavbarToResourcesPage();
+  </script>
+</html>
