--- a/about.html
+++ b/about.html
@@ -1,4 +1,87 @@
----
-layout: aboutLayout
-title: Rutgers Triathlon About Page
----
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>About - Rutgers Triathlon Team</title>
+
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+    <![endif]-->
+    <link rel="shortcut icon" href="img/triathlonLogo.png">
+  </head>
+  <body>
+
+    <!-- Nav Bar -->
+    <div id="nav-placeholder">NavBar</div>
+    <script src="//code.jquery.com/jquery.min.js"></script>
+    <script>
+        $.get("needs/navbar.html", function(data){
+        $("#nav-placeholder").replaceWith(data);
+        });
+    </script>
+    <!-- End Nav Bar -->
+
+    <!-- About Content -->
+    <div class="container-fluid top-buffer" id="aboutContainer">
+    <div class ="aboutcontent">
+      <h1>About Us</h1>
+    	<div class ="imgwrap">
+    		<img src ="img/AboutUsPoolNoodles.png">
+    		<div class='description'>
+    		<!-- description content -->
+    			<p class='description_content'>End of Semester Fun at the Pool!</p>
+    		<!-- end description content -->
+    		</div>
+    	</div>
+
+    	</br>
+    	</br>
+    	<p>Welcome to the Rutgers Triathlon Team, we are a growing club sport that is focused on building a close knit group of friends. Our team is all about having fun and getting members as much access to the triathlon and endurance sport community that we can.</p></br>
+    	<p>Founded in 2010, Rutgers Triathlon is a club sports team of Rutgers University centered on the New Brunswick campus. </p>
+    	</br>
+    	<p>Our goal is to create a close-knit group of friends who strive to compete in Triathlon, while pursuing their degree at RU.
+    		Our team proudly competes in the <a href ="http://www.northeastctc.com/">Northeast Collegiate Triathlon Conference</a>, and we have sent members to race at the USAT Collegiate National Championships since 2014.
+    	</p></br>
+
+    	<p>Feel free to contact us at any time via email: <a href="mailto:rutgerstriteam@gmail.com"> rutgerstriteam@gmail.com</a></p>
+
+    	<p>Connect with us on social media!</br>
+    		<ul>
+    			<li><p><a href ="https://www.facebook.com/RutgersTriathlonTeam/">Facebook!</a></p></li>
+    			<li><p><a href="https://www.instagram.com/rutgerstriathlon/">Instagram!</a></p></li>
+    			<li><p><a href ="https://twitter.com/rutgerstriteam">Twitter!</a></p></li>
+          <li><p><a href ="https://www.strava.com/clubs/RutgersTriathlon">Strava!</a></p></li>
+    	</p>
+      </br>
+    </div>
+    </div>
+    <!-- End About Content -->
+
+  </body>
+
+  <!-- Footer -->
+  <div id="nav-placeholder">NavBar</div>
+  <script src="//code.jquery.com/jquery.min.js"></script>
+  <script>
+      $.get("needs/footer.html", function(data){
+      $("#nav-placeholder").replaceWith(data);
+      });
+  </script>
+  <!-- End Footer -->
+
+  <!-- <script src="js/jquery-2.1.3.min.js"/> -->
+  <!---->
+  <script src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"></script>
+  <script src="js/firebase.js"></script>
+  <script src="js/jquery-2.1.3.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/dropdownonhover.js"></script>
+  <script type="text/javascript">
+   updateNavbarToAboutPage();
+  </script>
+</html>
