--- a/index.html
+++ b/index.html
@@ -1,6 +1,177 @@
----
-layout: default
-title: Home
----
-<div class="container-fluid">
-<script src="js/parallax.js"/>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Home - Rutgers Triathlon Team</title>
+
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+    <![endif]-->
+    <link rel="shortcut icon" href="img/triathlonLogo.png">
+  </head>
+  <body>
+
+<!-- Nav Bar -->
+    <div id="nav-placeholder">NavBar</div>
+    <script src="//code.jquery.com/jquery.min.js"></script>
+    <script>
+        $.get("needs/navbar.html", function(data){
+        $("#nav-placeholder").replaceWith(data);
+        });
+    </script>
+<!-- End Nav Bar -->
+
+<!-- Parallax Display -->
+    <section class="bg-1 text-center">
+    	<h1><span style="color: #cc0033;">Rutgers</span> Triathlon</h1>
+    	<p class="lead">Swim <span style="color: #cc0033;">Bike</span> Run</p>
+<!-- Carousel Display -->
+      <div id="photoCarousel" class="carousel slide" data-ride="carousel">
+          <!-- Carousel indicators -->
+          <ol class="carousel-indicators">
+              <li data-target="#photoCarousel" data-slide-to="0" class="active"></li>
+              <li data-target="#photoCarousel" data-slide-to="1"></li>
+              <li data-target="#photoCarousel" data-slide-to="2"></li>
+              <li data-target="#photoCarousel" data-slide-to="3"></li>
+              <li data-target="#photoCarousel" data-slide-to="4"></li>
+          </ol>
+          <!-- Wrapper for carousel items -->
+          <div class="carousel-inner">
+              <div class="item active">
+                  <img src="img/cover.jpg" alt="First Slide">
+              </div>
+              <div class="item">
+                  <img src="img/cover2.jpg" alt="Second Slide">
+              </div>
+              <div class="item">
+                  <img src="img/cover3.jpg" alt="Third Slide">
+              </div>
+              <div class="item">
+                  <img src="img/cover4.png" alt="Fourth Slide">
+              </div>
+              <div class="item">
+                  <img src="img/cover5.png" alt="Fifth Slide">
+              </div>
+          </div>
+          <!-- Carousel controls -->
+          <a class="carousel-control left" href="#photoCarousel" data-slide="prev" style= "background-image:none;">
+              <span class="glyphicon glyphicon-chevron-left"></span>
+          </a>
+          <a class="carousel-control right" href="#photoCarousel" data-slide="next" style="background-image:none;">
+              <span class="glyphicon glyphicon-chevron-right"></span>
+          </a>
+      </div>
+<!-- End Carousel Display -->
+    </section>
+<!-- End Parallax Display -->
+
+<!-- Index Bottom Panel -->
+    <div class="container">
+    </br>
+    <div class ="newsAndWidg">
+    <div class ="row">
+        <div class ="col-md-8">
+          <h1>Recent Updates</h1>
+
+            <p><b> September 8, 2018 </b></p>
+            <div class = "imgwrapper">
+              <img src= "img/ruttLobster2k18.jpg" style ="margin:0; width:100%;" onmouseover="this.src='img/ruttLobster2k18CasFin.jpg';" onmouseout="this.src='img/ruttLobster2k18.jpg';" />
+            </div>
+          </br>
+          <p> A new semester has arrived, and we're just racin' in crustacean nation! We had an awesome time
+              at the Lobsterman Triathlon this year! It was a very long
+              drive, but it was worth it. Outstanding racing conditions,
+              and Cody was even able to fly his drone around for a little
+              bit! Check out the <a href = "https://www.youtube.com/watch?v=fhH0zDORoQ4">
+              YouTube Video </a> on our channel!
+            </br>
+            </br>
+
+            <p><b>April 27, 2018</b></p>
+            <div class ="imgwrapper">
+              <img src='img/RU_Nats2018A.png' style ="margin:0; width:100%;" onmouseover="this.src='img/RU_Nats2018B.png';" onmouseout="this.src='img/RU_Nats2018A.png';" />
+              <div class='description'>
+              <!-- description content -->
+              <!-- end description content -->
+              </div>
+            </div>
+            </br>
+              <p>Hot, crampy and swampy (despite no swim!) race at USAT Collegiate Club Nationals in Tuscaloosa, Alabama! Thank you Tuscaloosa for being a great host and letting us swarm your city! Our 8 Rutgers Triathletes had an amazing day conquering the duathlon course. Our team placed 98th in the Combined Overall competition with our Men's team at 92nd and our Women's team at 86th. <a href ="https://www.teamusa.org/usa-triathlon/events/national-championships/2018/2018-collegiate-club-national-championships/results">Full results here!</a></p></br>
+
+            <p><b>April 7, 2018</b></p>
+            <div class ="imgwrapper">
+              <img src='img/RU_WPDu2018A.png' style ="margin:0; width:100%;" onmouseover="this.src='img/RU_WPDu2018B.png';" onmouseout="this.src='img/RU_WPDu2018A.png';" />
+              <div class='description'>
+              <!-- description content -->
+              <!-- end description content -->
+              </div>
+            </div>
+            </br>
+              <p>Another freezing cold and windy race at the 2018 West Point Duathlon! Next is Nationals in (hopefully not too) warm Tuscaloosa, Alabama!</p></br>
+
+              <p><b>January 23, 2018</b></p>
+              <div class ="imgwrapper">
+                <img src ="img/RU_WestchesterTri17.png" style ="margin:0; width:100%;">
+                <div class='description'>
+                <!-- description content -->
+                <!-- end description content -->
+                </div>
+              </div>
+        </br>
+            <p>If you're interested in joining this great group of triathletes come to the General Interest Meeting! We'll me talking about upcoming events and races as well as the practice schedule for this Spring semester. The meeting will be at 7:00 PM - 8:00 PM on Friday, January 26, 2018 in Room 202 at the College Ave Gym. New and old members are welcome! <a href="https://www.facebook.com/events/366545360478399/">RSVP on FB!</a></p></br>
+
+          <p><b>October 22, 2017</b></p>
+              <div class ="imgwrapper">
+                <img src ="img/RU_IndoorTri2017All.png" style ="margin:0; width:100%;">
+                <div class='description'>
+                <!-- description content -->
+                <!-- end description content -->
+                </div>
+              </div>
+        </br>
+
+        <p>Our athletes swam, biked and ran through the Werblin Recreation Center! We had a great group of triathletes, a few beginners and a few veterans. We hope everyone enjoyed their morning with the Rutgers Triathlon Team and hope to see you next year! Congratulations to all of our amazing athletes!</p></br>
+
+        <p>Check out the results <a href ="RU_indoortriathlon.html#results">here!</a></p>
+
+        </div>
+        <div class =col-md-4>
+          <iframe height='454' width=100% frameborder='0' allowtransparency='true' scrolling='no' src='https://www.strava.com/clubs/RutgersTriathlon/latest-rides/7e71c1ac0f76b046c3f81fa3ff24e5cac143cdae?show_rides=true'>
+          </iframe>
+        </br></br>
+          <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FRutgersTriathlonTeam%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width=100% height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+        </br></br>
+        </div>
+      </div>
+    </div>
+    </div>
+<!-- End Index Bottom Panel -->
+
+  </body>
+
+<!-- Footer -->
+  <div id="nav-placeholder">NavBar</div>
+  <script src="//code.jquery.com/jquery.min.js"></script>
+  <script>
+      $.get("needs/footer.html", function(data){
+      $("#nav-placeholder").replaceWith(data);
+      });
+  </script>
+<!-- End Footer -->
+
+  <script src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"></script>
+  <script src="js/firebase.js"></script>
+  <script src="js/jquery-2.1.3.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/dropdownonhover.js"></script>
+  <script type="text/javascript">
+   retrieveAndPopulatePracticeData();
+   retrieveAndPopulateOfficerData();
+   retrieveAndPopulateRaceData();
+  </script>
+</html>
