--- a/officers.html
+++ b/officers.html
@@ -1,4 +1,128 @@
----
-layout: officersLayout
-title: Rutgers Triathlon Officers Page
----
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Officers - Rutgers Triathlon Team</title>
+
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+    <![endif]-->
+    <link rel="shortcut icon" href="img/triathlonLogo.png">
+  </head>
+  <body>
+
+<!-- Nav Bar -->
+    <div id="nav-placeholder">NavBar</div>
+    <script src="//code.jquery.com/jquery.min.js"></script>
+    <script>
+        $.get("needs/navbar.html", function(data){
+        $("#nav-placeholder").replaceWith(data);
+        });
+    </script>
+<!-- End Nav Bar -->
+
+<!-- Officer Content -->
+    <div class="container-fluid top-buffer">
+      <div class ="officercontent">
+
+        <h1>Officers</h1>
+        <div class ="imgwrap">
+          <img src ="img/RU_MSUIndoorTri2016.jpg">
+          <div class='description'>
+          <!-- description content -->
+            <p class='description_content'>Rutgers Triathlon Team competing at the MSU Indoor Triathlon</p>
+          <!-- end description content -->
+          </div>
+        </div>
+
+      </br></br>
+        <div class ="col-md-4">
+        <div class="panel panel-danger left">
+            <div class="panel-heading"><img class="media-object" src="img/chelsiescarafile.png"/><p></br><b>Chelsie Scarafile</b></br></br>President</p></div>
+        </div>
+      </div>
+      <div class ="col-md-4">
+      <div class="panel panel-danger right">
+          <div class="panel-heading"><img class="media-object" src="img/kaiya.png"/><p></br><b>Kaiya Reimer</b></br></br>Treasurer & Fundraising</p></div>
+      </div>
+      </div>
+      <div class ="col-md-4">
+      <div class="panel panel-danger right">
+          <div class="panel-heading"><img class="media-object" src="img/ProfilePic.png"/><p></br><b>Emily Cheng</b></br>Social Media &</br> Clothing Manager</p></div>
+      </div>
+      </div>
+    <div class ="col-md-12"></div>
+
+        <div class ="col-md-4">
+        <div class="panel panel-danger left">
+            <div class="panel-heading"><img class="media-object" src="img/drewbecza.png"/><p></br><b>Drew Becza</b></br>Practice Captain </br>Race Coordinator</p></div>
+            <div class="panel-body">
+                  <p>I ran for three years in high school but didn't start triathlon until the summer coming into my sophomore year at Rutgers when my girlfriend and I signed up for our first sprint tri in Sparta NJ. Before that I had never swam or cycled competitively (or recreationally for that matter). I joined the tri team here last semester and have done 3 triathlons in total.</p>
+            </div>
+        </div>
+        </div>
+
+        <div class ="col-md-4">
+        <div class="panel panel-danger right">
+            <div class="panel-heading"><img class="media-object" src="img/tylerhong.png"/><p></br><b>Tyler Hong</b></br>Practice Captain </br>Race Coordinator</p></div>
+        </div>
+        </div>
+
+        <div class ="col-md-4">
+        <div class="panel panel-danger right">
+            <div class="panel-heading"><img class="media-object" src="img/MarciniakExitWater.jpg"/><p></br><b>Stephen Marciniak</b></br>Practice Captain </br>Race Coordinator</p></div>
+        </div>
+        </div>
+
+        <div class ="col-md-12"></div>
+        <div class ="col-md-4">
+        <div class="panel panel-danger left">
+            <div class="panel-heading">
+              <a href = "http://codyconroy.com"> <img class="media-object" src="img/conroyOfficer-2.jpg"/> </a> <p></br><b>Cody Conroy</b></br>Photographer and Webmaster</p></div>
+              <div class="panel-body">
+                  <p>I have basically always been a water guy. I wanted to join the
+                  Navy in high school, and that resulted in me joining the swim
+                  team (although I could not swim.) I got pretty good at swimming,
+                  and since I like bikes, I figured I might as well add running to get
+                  the full trio.</p>
+            </div>
+        </div>
+        </div>
+        <div class ="col-md-4">
+        <div class="panel panel-danger left">
+            <div class="panel-heading"><img class="media-object" src="img/CaseyJones.png"/><p></br><b>Casey Jones</b></br>Social Events</p></div>
+            </div>
+        </div>
+
+        </div>
+    </div>
+<!-- End Officer Content -->
+
+  </body>
+
+<!-- Footer -->
+  <div id="nav-placeholder">NavBar</div>
+  <script src="//code.jquery.com/jquery.min.js"></script>
+  <script>
+      $.get("needs/footer.html", function(data){
+      $("#nav-placeholder").replaceWith(data);
+      });
+  </script>
+<!-- End Footer -->
+
+  <!-- <script src="js/jquery-2.1.3.min.js"/> -->
+  <!---->
+  <script src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"></script>
+  <script src="js/firebase.js"></script>
+  <script src="js/jquery-2.1.3.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/dropdownonhover.js"></script>
+  <script type="text/javascript">
+  updateNavbarToOfficersPage();
+  </script>
+</html>
