--- a/pracschedule.html
+++ b/pracschedule.html
@@ -1,4 +1,125 @@
----
-layout: pracLayout
-title: Rutgers Triathlon Practice Schedule
----
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Practice Schedule - Rutgers Triathlon Team</title>
+
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+    <![endif]-->
+    <link rel="shortcut icon" href="img/triathlonLogo.png">
+  </head>
+  <body>
+
+<!-- Nav Bar -->
+    <div id="nav-placeholder">NavBar</div>
+    <script src="//code.jquery.com/jquery.min.js"></script>
+    <script>
+        $.get("needs/navbar.html", function(data){
+        $("#nav-placeholder").replaceWith(data);
+        });
+    </script>
+<!-- End Nav Bar -->
+
+<!-- Practice Schedule Content -->
+    <div class="container-fluid top-buffer" id="aboutContainer">
+    <div class ="racecontent">
+      <h1>Practice Schedule</h1>
+    	<div class ="imgwrap">
+    		<img src ="img/RU_SwimPrac2016.jpg">
+    		<div class='description'>
+    		<!-- description content -->
+    			<p class='description_content'>Swim Practice!</p>
+    		<!-- end description content -->
+    		</div>
+    	</div>
+
+    	</br>
+    	</br>
+    <p>Be sure to check the facebook group for smaller group practices that aren't regularly scheduled.</p>
+    <h2>Fall 2018</h2></br>
+
+    <h3><b> Monday </b></h3>
+      </br>
+      <p>
+        <b style="color: #cc0033;">What: </b> Swim </br>
+        <b style="color: #cc0033;">When: </b> 8:30 PM </br>
+        <b style="color: #cc0033;">Where: </b> Cook Douglass Recreation Center </br></br>
+      </p>
+
+    <h3><b> Tuesday </b></h3>
+      </br>
+      <p>
+        <b style="color: #cc0033;">What: </b> Run </br>
+        <b style="color: #cc0033;">When: </b> 6:30 PM </br>
+        <b style="color: #cc0033;">Where: </b> University Park, Busch Campus </br></br>
+      </p>
+
+    <h3><b> Wednesday </b></h3>
+      </br>
+      <p>
+        <b style="color: #cc0033;">What: </b> Swim </br>
+        <b style="color: #cc0033;">When: </b> 8:30 PM </br>
+        <b style="color: #cc0033;">Where: </b> Cook Douglass Recreation Center </br></br>
+      </p>
+
+    <h3><b> Thursday </b></h3>
+      </br>
+      <p>
+        <b style="color: #cc0033;">What: </b> Bike (Spin) </br>
+        <b style="color: #cc0033;">When: </b> 8:30 PM </br>
+        <b style="color: #cc0033;">Where: </b> Werblin Recreation Center, Busch Campus </br></br>
+      </p>
+
+    <h3><b> Friday </b></h3>
+      </br>
+      <p>
+        <b style="color: #cc0033;">What: </b> Run </br>
+        <b style="color: #cc0033;">Where: </b> College Avenue Student Center </br>
+        <b style="color: #cc0033;">When: </b> 10:00 AM </br>
+      </p>
+
+    <h3><b> Saturday </b></h3>
+      </br>
+      <p>
+        <b style="color: #cc0033;">What: </b> Bike (Group Ride) </br>
+        <b style="color: #cc0033;">Where: </b> Pop's Bike Shop </br>
+          <a href = "https://www.google.com/maps/place/Pops+Bike+Shop/@40.5677677,-74.5420989,17z/data=!3m1!4b1!4m5!3m4!1s0x89c3bf71282d7151:0x6accfc9b8075bd10!8m2!3d40.5677636!4d-74.5399102"> <ul style = "list-style-image: url('img/gpsPin.jpg');"> </a>
+            <li>227 W Union Ave, Bound Brook, NJ 08805</li>
+          </ul>
+        <p><b style="color: #cc0033;">When: </b> 8:00 AM </p></br>
+      </p>
+
+      </div><!-- panelBody -->
+    </div>
+<!-- End Practice Scheudle Content -->
+
+  </body>
+
+<!-- Footer -->
+  <div id="nav-placeholder">NavBar</div>
+  <script src="//code.jquery.com/jquery.min.js"></script>
+  <script>
+      $.get("needs/footer.html", function(data){
+      $("#nav-placeholder").replaceWith(data);
+      });
+  </script>
+<!-- End Footer -->
+
+  <!-- <script src="js/jquery-2.1.3.min.js"/> -->
+  <!---->
+  <script src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"></script>
+  <script src="js/firebase.js"></script>
+  <script src="js/jquery-2.1.3.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/dropdownonhover.js"></script>
+  <script type="text/javascript">
+   updateNavbarToPracPage();
+   updateNavbarToMembersPage();
+  </script>
+</html>
