--- a/raceschedule.html
+++ b/raceschedule.html
@@ -1,4 +1,78 @@
----
-layout: raceLayout
-title: Rutgers Triathlon Race Schedule
----
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Race Schedule - Rutgers Triathlon Team</title>
+
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+    <![endif]-->
+    <link rel="shortcut icon" href="img/triathlonLogo.png">
+  </head>
+  <body>
+
+<!-- Nav Bar -->
+    <div id="nav-placeholder">NavBar</div>
+    <script src="//code.jquery.com/jquery.min.js"></script>
+    <script>
+        $.get("needs/navbar.html", function(data){
+        $("#nav-placeholder").replaceWith(data);
+        });
+    </script>
+<!-- End Nav Bar -->
+
+<!-- Race Content -->
+    <div class="container-fluid top-buffer" id="aboutContainer">
+    <div class ="racecontent">
+      <h1>Race Schedule</h1>
+    	<div class ="imgwrap">
+    		<img src ="img/RU_RaceSchedule.png">
+    		<div class='description'>
+    		<!-- description content -->
+    			<p class='description_content'>The Rutgers Triathlon Team at Westchester Triathlon 2016!</p>
+    		<!-- end description content -->
+    		</div>
+    	</div>
+
+    	</br>
+    	</br>
+      <h2>Fall 2018</h2>
+      <h3><a href ="https://www.northeastctc.com/races">NECTC</a> Schedule</b></h3></br>
+      <p><b>West Point Sprint</b> - 08/25/18</p>
+      <p><b>Lake George Olympic</b> - 09/01/18</p>
+      <p><b>Lobsterman Olympic</b> - 09/08/18
+      <p><b>Buzzard's Bay Sprint</b> - 09/16/18</p>
+      <p><b>Westchester Olympic (NECTC Championship)</b> - 09/23/18</p>
+    </div>
+    </div>
+<!-- End Race Content -->
+
+  </body>
+
+<!-- Footer -->
+  <div id="nav-placeholder">NavBar</div>
+  <script src="//code.jquery.com/jquery.min.js"></script>
+  <script>
+      $.get("needs/footer.html", function(data){
+      $("#nav-placeholder").replaceWith(data);
+      });
+  </script>
+<!-- End Footer -->
+
+  <!-- <script src="js/jquery-2.1.3.min.js"/> -->
+  <!---->
+  <script src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"></script>
+  <script src="js/firebase.js"></script>
+  <script src="js/jquery-2.1.3.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/dropdownonhover.js"></script>
+  <script type="text/javascript">
+   updateNavbarToRacePage();
+   updateNavbarToMembersPage();
+  </script>
+</html>
