--- a/runreso.html
+++ b/runreso.html
@@ -1,4 +1,107 @@
----
-layout: runLayout
-title: Rutgers Triathlon Run Resources
----
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Run Resources - Rutgers Triathlon Team</title>
+
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+    <![endif]-->
+    <link rel="shortcut icon" href="img/triathlonLogo.png">
+  </head>
+  <body>
+
+<!-- Nav Bar -->
+    <div id="nav-placeholder">NavBar</div>
+    <script src="//code.jquery.com/jquery.min.js"></script>
+    <script>
+        $.get("needs/navbar.html", function(data){
+        $("#nav-placeholder").replaceWith(data);
+        });
+    </script>
+<!-- End Nav Bar -->
+
+<!-- Run Content -->
+    <div class="container-fluid top-buffer" id="aboutContainer">
+    <div class ="aboutcontent">
+      <h1>Run Resources</h1>
+    	<div class ="imgwrap">
+    		<img src ="img/runreso.png">
+    		<div class='description'>
+    		<!-- description content -->
+    			<p class='description_content'>Rutgers Triathlon Running at University Park!</p>
+    		<!-- end description content -->
+    		</div>
+    	</div>
+
+    	</br>
+    	</br>
+    	<p>Generally, our long runs are out of <a href =https://goo.gl/maps/PyE4iwJJgAw>Werblin</a> or <a href ="https://goo.gl/maps/pxT2JTZUuvt">College Ave Gym</a> while our track workouts are at the ~ 800 m loop at <a href ="https://goo.gl/maps/WmU9AEqouhy">University Park</a>.
+      <p>If you're new to running, the following is a set of guidelines and required and optional items for a sucessful run.</p>
+
+      <h3><b>Required items</b></h3>
+      <ul>
+        <li><p><b>Running Shoes</b> - A good pair of running shoes will take you far (approx. 300-350 mi) !</p></li>
+        <li><p><b>Socks</b> - While some triathletes don't wear socks during a race, they are great for avoiding blisters and keeping feet happy</p></li>
+        <li><p><b>Running clothes</b> - Dress appropriately for the weather! </p></li>
+        <li><p><b>Sunscreen</b> - Protects your skin from dangerous UV radiation during your run</p></li>
+        <li><p><b>Water bottle(s)</b> - For longer runs that need it, or to keep you hydrated during hard track workouts</p></li>
+        <li><p><b>Snacks</b> - If doing a run longer than 1 hour, bring some snacks!</p></li>
+        <li><p><b>Keys</b> - Don't get locked out from your car or house!</p></li>
+        <li><p><b>Watch</b> - Useful for keeping track of splits, distance, etc. (If it's not on Strava, did you actually run?)</p></li>
+    </ul>
+    </br>
+      <h3><b>Optional Items</b></h3>
+      <ul>
+        <li><p><b>Cellphone</b> - In the event you get lost or have an emergency; give a good buddy a call.</p></li>
+        <li><p><b>Cash/Credit Card/Wallet</b> - Great for the inevitable moments when you run out of snacks or hydration.</p></li>
+        <li><p><b>Identification</b> - Driver's license, RoadID, etc are always a good idea to keep on you in the event of a serious accident. Stay safe!</p></li>
+        <li><p><b>Sunglasses</b> - Protects your eyes from wind and dust and other debris and keep you looking fresh.</p></li>
+        <li><p><b>Heart Rate Monitor</b> - Great for tracking your heart rate and can be used to measure your effort levels and improvement over time.</p></li>
+      </ul>
+    </br>
+      <h3><b>Additional Sources</b></h3>
+      <ul>
+          <li><p><a href ="https://www.mytimetotri.com/training/run/run-specific-gear">Run-Specific Gear from USAT's Time to Tri Iniiative</a></p></li>
+          <li><p><a href ="https://www.mytimetotri.com/training/run/quality-vs-quantity-running">Quality vs. Quantity in Running</a></p></li>
+          <li><p><a href ="https://www.mytimetotri.com/training/run/triathlon-speed-runners">Triathlon Speed for Runners</a></p></li>
+          <li><p><a href = "https://www.youtube.com/watch?v=GSGzqkjrWRA">Essentials of Running Mechanics</a></p></li>
+          <li><p><a href ="https://www.youtube.com/watch?v=Y8lIFxCE5Ro">How to Choose a Running Shoe? - Global Triathlon Network</a></p></li>
+      </ul>
+    	</br>
+      <h3><b>Local run routes</b></h3>
+      <p>The Rutgers Running Club has gathered a few great routes around campus. <a href ="https://rutgersrunningclub.weebly.com/running-routes.html">Check them out here!</a></p>
+      </br>
+    </div>
+    </div>
+<!-- End Run Content -->
+
+  </body>
+
+<!-- Footer -->
+  <div id="nav-placeholder">NavBar</div>
+  <script src="//code.jquery.com/jquery.min.js"></script>
+  <script>
+      $.get("needs/footer.html", function(data){
+      $("#nav-placeholder").replaceWith(data);
+      });
+  </script>
+<!-- End Footer -->
+
+  <!-- <script src="js/jquery-2.1.3.min.js"/> -->
+  <!---->
+  <script src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"></script>
+  <script src="js/firebase.js"></script>
+  <script src="js/jquery-2.1.3.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/dropdownonhover.js"></script>
+  <script type="text/javascript">
+   updateNavbarTorunresoPage();
+   updateNavbarToResourcesPage();
+  </script>
+</html>
