--- a/sponsors.html
+++ b/sponsors.html
@@ -1,4 +1,97 @@
----
-layout: sponsorLayout
-title: Rutgers Triathlon Sponsors
----
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Sponsors - Rutgers Triathlon Team</title>
+
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+    <![endif]-->
+    <link rel="shortcut icon" href="img/triathlonLogo.png">
+  </head>
+  <body>
+
+<!-- Nav Bar -->
+    <div id="nav-placeholder">NavBar</div>
+    <script src="//code.jquery.com/jquery.min.js"></script>
+    <script>
+        $.get("needs/navbar.html", function(data){
+        $("#nav-placeholder").replaceWith(data);
+        });
+    </script>
+<!-- End Nav Bar -->
+
+<!-- Sponsor Content -->
+    <div class="container-fluid top-buffer" id="sponsorContainer">
+    	<div class ="sponsorcontent">
+    		<h1>Sponsors</h1>
+    		<div class ="imgwrap">
+    			<img src ="img/RU_Nats2017B.png">
+    			<div class='description'>
+    			<!-- description content -->
+    				<p class='description_content'>Rutgers Triathlon at USAT Nationals 2017</p>
+    			<!-- end description content -->
+    			</div>
+    		</div>
+    		</br></br>
+    		<p>Thank you to all of our sponsors! If you are interested in sponsoring the Rutgers Triathlon Team please email us at <a href="mailto:rutgerstriteam@gmail.com">rutgerstriteam@gmail.com</a></p>
+    		</br></br>
+    		<p>
+    			<a href="http://www.popsbikeshop.com/">
+    				<img src ="img/popsbikeshoplogo.png" width="250px" style="display:block; margin:auto; width:40%;">
+    			</a>
+    		</p>
+    		<p style="margin:auto; width:50%; padding:10px; text-align:center;">
+    			227 West Union Ave. Bound Brook, NJ 08805
+    		</p>
+
+
+
+    	</div>
+    <!--	<div class="imgcenter" style="position:relative; width:100%;">
+    		<div class="aspect" style="padding-top:100%"></div>
+    		<div class="imgwallet" style="position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+
+        text-align:center; /* Align center inline elements */
+        font: 0/0 a;"
+
+        		<div style="margin:auto; width:50%; padding:10px;">
+
+    		</div>
+    		-->
+
+    </div>
+<!-- End Sponsor Content -->
+
+  </body>
+
+<!-- Footer -->
+  <div id="nav-placeholder">NavBar</div>
+  <script src="//code.jquery.com/jquery.min.js"></script>
+  <script>
+      $.get("needs/footer.html", function(data){
+      $("#nav-placeholder").replaceWith(data);
+      });
+  </script>
+  <!-- End Footer -->
+
+  <!-- <script src="js/jquery-2.1.3.min.js"/> -->
+  <!---->
+  <script src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"></script>
+  <script src="js/firebase.js"></script>
+  <script src="js/jquery-2.1.3.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/dropdownonhover.js"></script>
+  <script type="text/javascript">
+   updateNavbarToSponsorPage();
+  </script>
+</html>
