--- a/needs/navbar.html
+++ b/needs/navbar.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="rutgerstriathlon.com"><img src="img/triathlonLogo.png"></a>
+      <a class="navbar-brand" href="http://rutgerstriathlon.com/"><img src="img/triathlonLogo.png"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
