Updating recent updates

--- a/index.html
+++ b/index.html
@@ -78,6 +78,18 @@
         <div class ="col-md-8">
           <h1>Recent Updates</h1>
 
+
+          <p><b> October 27, 2018 </b></p>
+          <div class = "imgwrapper">
+            <img src= "img/recentUpdates/2018IndoorTri1.jpg" style ="margin:0; width:100%;" onmouseover="this.src='img/recentUpdates/2018IndoorTri2.jpg';" onmouseout="this.src='img/recentUpdates/2018IndoorTri1.jpg';" />
+          </div>
+          </br>
+          <p> HAVE YOU BEEN TO OUR INDOOR TRIATHLON YET? If you missed this year, look out for Fall 2019 updates. This year's <a href = "https://www.youtube.com/watch?v=tu2a7HtGCz0&t=96s">
+            YouTube Video </a> is a look inside what the athletes have to do in order to finish the Indoor Tri! Make sure to subscribe to stay up
+            to date!
+          </br>
+          </br>
+
             <p><b> September 8, 2018 </b></p>
             <div class = "imgwrapper">
               <img src= "img/ruttLobster2k18.jpg" style ="margin:0; width:100%;" onmouseover="this.src='img/ruttLobster2k18CasFin.jpg';" onmouseout="this.src='img/ruttLobster2k18.jpg';" />
@@ -113,32 +125,6 @@
             </div>
             </br>
               <p>Another freezing cold and windy race at the 2018 West Point Duathlon! Next is Nationals in (hopefully not too) warm Tuscaloosa, Alabama!</p></br>
-
-              <p><b>January 23, 2018</b></p>
-              <div class ="imgwrapper">
-                <img src ="img/RU_WestchesterTri17.png" style ="margin:0; width:100%;">
-                <div class='description'>
-                <!-- description content -->
-                <!-- end description content -->
-                </div>
-              </div>
-        </br>
-            <p>If you're interested in joining this great group of triathletes come to the General Interest Meeting! We'll me talking about upcoming events and races as well as the practice schedule for this Spring semester. The meeting will be at 7:00 PM - 8:00 PM on Friday, January 26, 2018 in Room 202 at the College Ave Gym. New and old members are welcome! <a href="https://www.facebook.com/events/366545360478399/">RSVP on FB!</a></p></br>
-
-          <p><b>October 22, 2017</b></p>
-              <div class ="imgwrapper">
-                <img src ="img/RU_IndoorTri2017All.png" style ="margin:0; width:100%;">
-                <div class='description'>
-                <!-- description content -->
-                <!-- end description content -->
-                </div>
-              </div>
-        </br>
-
-        <p>Our athletes swam, biked and ran through the Werblin Recreation Center! We had a great group of triathletes, a few beginners and a few veterans. We hope everyone enjoyed their morning with the Rutgers Triathlon Team and hope to see you next year! Congratulations to all of our amazing athletes!</p></br>
-
-        <p>Check out the results <a href ="RU_indoortriathlon.html#results">here!</a></p>
-
         </div>
         <div class =col-md-4>
           <iframe height='454' width=100% frameborder='0' allowtransparency='true' scrolling='no' src='https://www.strava.com/clubs/RutgersTriathlon/latest-rides/7e71c1ac0f76b046c3f81fa3ff24e5cac143cdae?show_rides=true'>
