Updating officers page

--- a/officers.html
+++ b/officers.html
@@ -31,73 +31,52 @@
       <div class ="officercontent">
 
         <h1>Officers</h1>
-        <div class ="imgwrap">
-          <img src ="img/RU_MSUIndoorTri2016.jpg">
-          <div class='description'>
-          <!-- description content -->
-            <p class='description_content'>Rutgers Triathlon Team competing at the MSU Indoor Triathlon</p>
-          <!-- end description content -->
+
+        </br></br>
+
+      <div class ="col-md-4">
+      <div class="panel panel-danger right">
+          <div class="panel-heading"><img class="media-object" src="img/officerImgs/kaiyaReimer.png"/><p></br><b>Kaiya Reimer</b></br>President</p></div>
+      </div>
+      </div>
+
+      <div class ="col-md-4">
+        <div class="panel panel-danger left">
+          <div class="panel-heading">
+            <a href = "http://codyconroy.com"> <img class="media-object" src="img/officerImgs/codyConroy.jpg"/> </a> <p></br><b>Cody Conroy</b></br>Vice President and Webmaster</p>
           </div>
         </div>
+      </div>
 
-      </br></br>
-        <div class ="col-md-4">
-        <div class="panel panel-danger left">
-            <div class="panel-heading"><img class="media-object" src="img/chelsiescarafile.png"/><p></br><b>Chelsie Scarafile</b></br></br>President</p></div>
+      <div class ="col-md-4">
+        <div class="panel panel-danger right">
+          <div class="panel-heading"><img class="media-object" src="img/officerImgs/tylerHong.png"/><p></br><b>Tyler Hong</b></br>Treasurer and Volunteer Coordinator</p></div>
         </div>
       </div>
-      <div class ="col-md-4">
-      <div class="panel panel-danger right">
-          <div class="panel-heading"><img class="media-object" src="img/kaiya.png"/><p></br><b>Kaiya Reimer</b></br></br>Treasurer & Fundraising</p></div>
-      </div>
-      </div>
-      <div class ="col-md-4">
-      <div class="panel panel-danger right">
-          <div class="panel-heading"><img class="media-object" src="img/ProfilePic.png"/><p></br><b>Emily Cheng</b></br>Social Media &</br> Clothing Manager</p></div>
-      </div>
-      </div>
+
     <div class ="col-md-12"></div>
 
         <div class ="col-md-4">
         <div class="panel panel-danger left">
-            <div class="panel-heading"><img class="media-object" src="img/drewbecza.png"/><p></br><b>Drew Becza</b></br>Practice Captain </br>Race Coordinator</p></div>
-            <div class="panel-body">
-                  <p>I ran for three years in high school but didn't start triathlon until the summer coming into my sophomore year at Rutgers when my girlfriend and I signed up for our first sprint tri in Sparta NJ. Before that I had never swam or cycled competitively (or recreationally for that matter). I joined the tri team here last semester and have done 3 triathlons in total.</p>
+            <div class="panel-heading"><img class="media-object" src="img/officerImgs/juliaLombardi.jpg"/><p></br><b>Julia Lombardi</b></br>Secretary</p></div>
+        </div>
+        </div>
+
+
+
+        <div class ="col-md-4">
+        <div class="panel panel-danger right">
+            <div class="panel-heading"><img class="media-object" src="img/officerImgs/stephenMarciniak.jpg"/><p></br><b>Stephen Marciniak</b></br>Practice Captain</p></div>
+        </div>
+        </div>
+
+        <div class ="col-md-4">
+        <div class="panel panel-danger left">
+            <div class="panel-heading"><img class="media-object" src="img/officerImgs/danielScalia.jpg"/><p></br><b>Daniel Scalia</b></br>Practice Captain</p></div>
             </div>
-        </div>
-        </div>
-
-        <div class ="col-md-4">
-        <div class="panel panel-danger right">
-            <div class="panel-heading"><img class="media-object" src="img/tylerhong.png"/><p></br><b>Tyler Hong</b></br>Practice Captain </br>Race Coordinator</p></div>
-        </div>
-        </div>
-
-        <div class ="col-md-4">
-        <div class="panel panel-danger right">
-            <div class="panel-heading"><img class="media-object" src="img/MarciniakExitWater.jpg"/><p></br><b>Stephen Marciniak</b></br>Practice Captain </br>Race Coordinator</p></div>
-        </div>
         </div>
 
         <div class ="col-md-12"></div>
-        <div class ="col-md-4">
-        <div class="panel panel-danger left">
-            <div class="panel-heading">
-              <a href = "http://codyconroy.com"> <img class="media-object" src="img/conroyOfficer-2.jpg"/> </a> <p></br><b>Cody Conroy</b></br>Photographer and Webmaster</p></div>
-              <div class="panel-body">
-                  <p>I have basically always been a water guy. I wanted to join the
-                  Navy in high school, and that resulted in me joining the swim
-                  team (although I could not swim.) I got pretty good at swimming,
-                  and since I like bikes, I figured I might as well add running to get
-                  the full trio.</p>
-            </div>
-        </div>
-        </div>
-        <div class ="col-md-4">
-        <div class="panel panel-danger left">
-            <div class="panel-heading"><img class="media-object" src="img/CaseyJones.png"/><p></br><b>Casey Jones</b></br>Social Events</p></div>
-            </div>
-        </div>
 
         </div>
     </div>
