--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
                   <img src="img/cover.jpg" alt="First Slide">
               </div>
               <div class="item">
-                  <img src="img/cover2.jpg" alt="Second Slide">
+                  <img src="img/cover2.jpg" class = "img-responsive" alt="Second Slide">
               </div>
               <div class="item">
-                  <img src="img/cover3.jpg" alt="Third Slide">
+                  <img src="img/cover3.jpg" class = "img-responsive" alt="Third Slide">
               </div>
               <div class="item">
-                  <img src="img/cover4.png" alt="Fourth Slide">
+                  <img src="img/cover4.png" class = "img-responsive" alt="Fourth Slide">
               </div>
               <div class="item">
-                  <img src="img/cover5.png" alt="Fifth Slide">
+                  <img src="img/cover5.png" class = "img-responsive" alt="Fifth Slide">
               </div>
           </div>
           <!-- Carousel controls -->
