Practice schedule updates

--- a/pracschedule.html
+++ b/pracschedule.html
@@ -29,21 +29,16 @@
 <!-- Practice Schedule Content -->
     <div class="container-fluid top-buffer" id="aboutContainer">
     <div class ="racecontent">
-      <h1>Practice Schedule</h1>
-    	<div class ="imgwrap">
-    		<img src ="img/RU_SwimPrac2016.jpg">
-    		<div class='description'>
-    		<!-- description content -->
-    			<p class='description_content'>Swim Practice!</p>
-    		<!-- end description content -->
-    		</div>
-    	</div>
-
+    <!--  <h1>Practice Schedule</h1>
+      	<iframe width = "600" height = "auto"
+          src = https://www.youtube.com/embed/v=fhH0zDORoQ4?autoplay=1>
+        </iframe>
     	</br>
     	</br>
-    <p>Be sure to check the facebook group for smaller group practices that aren't regularly scheduled.</p>
-    <h2>Fall 2018</h2></br>
+    <p>Be sure to check the facebook group for smaller group practices that aren't regularly scheduled.</p>    -->
+    <h2>Spring 2019</h2></br>
 
+<div class ="col-sm-6">
     <h3><b> Monday </b></h3>
       </br>
       <p>
@@ -51,15 +46,21 @@
         <b style="color: #cc0033;">When: </b> 8:30 PM </br>
         <b style="color: #cc0033;">Where: </b> Cook Douglass Recreation Center </br></br>
       </p>
+</div>
 
+<div class ="col-sm-6">
     <h3><b> Tuesday </b></h3>
       </br>
       <p>
-        <b style="color: #cc0033;">What: </b> Run </br>
-        <b style="color: #cc0033;">When: </b> 6:30 PM </br>
-        <b style="color: #cc0033;">Where: </b> University Park, Busch Campus </br></br>
+        <b style="color: #cc0033;">What: </b> Trainer Ride </br>
+        <b style="color: #cc0033;">When: </b> 9:00 PM </br>
+        <b style="color: #cc0033;">Where: </b> Busch Suites, Busch Campus </br></br>
       </p>
+</div>
 
+<div class ="col-sm-12"></div>
+
+<div class ="col-sm-6">
     <h3><b> Wednesday </b></h3>
       </br>
       <p>
@@ -67,23 +68,31 @@
         <b style="color: #cc0033;">When: </b> 8:30 PM </br>
         <b style="color: #cc0033;">Where: </b> Cook Douglass Recreation Center </br></br>
       </p>
+</div>
 
+<div class ="col-sm-6">
     <h3><b> Thursday </b></h3>
       </br>
       <p>
-        <b style="color: #cc0033;">What: </b> Bike (Spin) </br>
-        <b style="color: #cc0033;">When: </b> 8:30 PM </br>
-        <b style="color: #cc0033;">Where: </b> Werblin Recreation Center, Busch Campus </br></br>
+        <b style="color: #cc0033;">What: </b> Trainer Rides </br>
+        <b style="color: #cc0033;">When: </b> 9:00 PM </br>
+        <b style="color: #cc0033;">Where: </b> Busch Suites, Busch Campus </br></br>
       </p>
+</div>
 
+<div class ="col-sm-12"></div>
+
+<div class ="col-sm-6">
     <h3><b> Friday </b></h3>
       </br>
       <p>
         <b style="color: #cc0033;">What: </b> Run </br>
         <b style="color: #cc0033;">Where: </b> College Avenue Student Center </br>
-        <b style="color: #cc0033;">When: </b> 10:00 AM </br>
+        <b style="color: #cc0033;">When: </b> TBD - Check with Stephen Marciniak </br>
       </p>
+</div>
 
+<div class ="col-sm-6">
     <h3><b> Saturday </b></h3>
       </br>
       <p>
@@ -92,10 +101,12 @@
           <a href = "https://www.google.com/maps/place/Pops+Bike+Shop/@40.5677677,-74.5420989,17z/data=!3m1!4b1!4m5!3m4!1s0x89c3bf71282d7151:0x6accfc9b8075bd10!8m2!3d40.5677636!4d-74.5399102"> <ul style = "list-style-image: url('img/gpsPin.jpg');"> </a>
             <li>227 W Union Ave, Bound Brook, NJ 08805</li>
           </ul>
-        <p><b style="color: #cc0033;">When: </b> 8:00 AM </p></br>
+        <p><b style="color: #cc0033;">When: </b> 8:00 AM or 9:00 AM</p></br>
       </p>
+</div>
 
-      </div><!-- panelBody -->
+      </div>
+      <!-- panelBody -->
     </div>
 <!-- End Practice Scheudle Content -->
 
